--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
+  "dependencies": {
+    "serialport": "^9.0.7"
+  },
   "bugs": {
     "url": "https://github.com/GregoryInnovo/serial-port-arduino/issues"
   },
