--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@serialport/parser-readline": "^9.0.7",
     "serialport": "^9.0.7"
   },
   "bugs": {
