--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@serialport/parser-readline": "^9.0.7",
+    "cross-fetch": "^3.1.4",
     "serialport": "^9.0.7"
   },
   "bugs": {
