--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@serialport/parser-readline": "^9.0.7",
     "cross-fetch": "^3.1.4",
-    "serialport": "^9.0.7"
+    "mqtt": "^4.2.8",
+    "serialport": "^9.0.7",
+    "ubidots": "^0.0.4"
   },
   "bugs": {
     "url": "https://github.com/GregoryInnovo/serial-port-arduino/issues"
